# lighthouse2

./: .gitignore  LICENSE-2.0.txt  LICENSE.txt  LightHouse2.sln  README.md  clean.bat  student-implementations.md  update_CUDA_verison.bat  update_CUDA_version.bat
apps/_shareddata/: abstract.mtl  basic_box.mtl  four-cones.mtl  lh2text.mtl  more-planes.mtl  normal_map.gltf  scene.gltf  three-boxes.mtl  three-planes-above-vertical.mtl  three-planes.mtl
apps/ai_debugger/: README.md  ai_debugger.vcxproj  ai_debugger.vcxproj.filters  camera.xml  debug_ui.h  edit_ui.h  fps_printer.cpp  main.cpp  main_tools.h  main_ui.h
apps/app_matui/: app_matui.vcxproj  app_matui.vcxproj.filters  camera.xml  main.cpp  main_tools.h  main_ui.h
apps/benchmarkapp/: benchmarkapp.vcxproj  benchmarkapp.vcxproj.filters  camera.xml  imgui.ini  main.cpp  main_tools.h  main_ui.h  spline_seq.txt
apps/imguiapp/: camera.xml  imgui.ini  (+5 more)
docs/: PBRT_support.md  architecture.txt  building LH2.docx  cloning a core.docx
lib/RenderCore_OptixPrime_PBRT/: CMakeLists.txt  core_api.cpp  core_mesh.cpp  core_mesh.h  core_settings.h  rendercore.cpp  rendercore.h  rendercore_optixprime_pbrt.vcxproj
lib/RenderCore_OptixPrime_PBRT/kernels/: .cuda.cu  .cuda.h  Storage.h  VariantStore.h  bsdf.h  bxdf.h  camera.h  connections.h  material_bsdf_stack.h  material_disney.h  material_intf.h  noerrors.h  pathtracer.h  tbn.h  tools.h
lib/RenderCore_OptixPrime_PBRT/kernels/pbrt/: disney.h  fresnel.h  glass.h  materials.h  matte.h  metal.h  microfacet.h  mirror.h  plastic.h  reflection.h  substrate.h  uber.h  util.h
(+1037 files in other folders)
